<resources>
    <string name="app_name">Pizzeria Monalisa</string>
    <string name="business_name">Pizzeria Monalisa</string>
    <string name="business_phone">(48) 3348-1904</string>
    <string name="business_address">234, Prof. Áurea Cruz Street</string>
    <string name="business_website">www.pizzariamonalisa.com.br</string>
    <string name="business_description">Pizzeria Monalisa is a small business made by and for families. It\'s serves pizzas with high quality products and also a good taste. It\'s not so expensive.</string>
</resources>
